[tool.poetry]
name = "python-ping"
version = "0.1.0"
description = "A simple script to ping cloudflare and google and record packet loss and response times."
authors = ["Malthe Karbo"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.26.0"
pythonping = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"
ipython = "^8.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
